feat: hide index

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <title>人物介紹</title>
@@ -39,7 +39,7 @@
                 <a href="./lin-or-profiles/index.html" class="custom-card">
                     <div class="card text-white bg-info mb-3" style="width: 20rem; display: flex;">
                         <div class="card-body">
-                            <!-- <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>             -->
+
                             <img src="pics/eileen_thumbnail.jpg" alt="Eileen">
                             <h3 class="card-title">乂Eileen乂&nbsp;&nbsp;&#9803;</h3>
                             <span class="angle-right-icon"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
@@ -50,7 +50,7 @@
                 <a href="./lin-gouzha-profiles/index.html" class="custom-card">
                     <div class="card text-white bg-info mb-3" style="width: 20rem; display: flex;">
                         <div class="card-body">
-                            <!-- <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>             -->
+                            
                             <img src="pics/agnes_thumbnail.jpg" alt="Agnes">
                             <h3 class="card-title">乂宇棠乂&nbsp;&nbsp;&#9811;</h3>
                             <span class="angle-right-icon"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
@@ -63,7 +63,7 @@
                 <a href="./wang-wangwang-profile/index.html" class="custom-card">
                     <div class="card text-white bg-info mb-3" style="width: 20rem; display: inline-block">
                         <div class="card-body">
-                            <!-- <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>             -->
+                            
                             <img src="pics/mili_thumbnail.jpg" alt="Mili">
                             <h3 class="card-title">乂Mili乂&nbsp;&nbsp;&#9806;</h3>
                             <span class="angle-right-icon"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
@@ -86,7 +86,7 @@
     </div>
     </div>
     </div>
-  <!-- </canvas> -->
+  
 </head>
 <body>
 		
@@ -198,4 +198,4 @@
         </script>
 
 </body>
-</html>
+</html> -->
