--- a/red-snow/index.html
+++ b/red-snow/index.html
@@ -896,14 +896,106 @@ canvas.drawing, canvas.drawingBuffer {
 <html>
     <head>
         <!-- <script  src="html5-qrcode.min.js"></script>                 -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="index.css" />  
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>      
         <script src="html5-qrcode.min.js"></script>
         <script src="https://raw.githubusercontent.com/mebjas/html5-qrcode/master/minified/html5-qrcode.min.js"></script>
         <!-- <script src="html5-qrcode-demo.js"></script> -->
     </head>
     <body>
-        <div style="width: 500px" id="reader"></div>
-        <div id="qr-reader" style="width:500px"></div>
-        <div id="qr-reader-results"></div>
+        <div class="row text-center my-5 inline-block">
+            <div class="col-md-3"></div>        
+            <div class="col-md-3"></div>
+            <div class="col-md-3">                
+                <div class="btn btn-success">開始</div>                    
+            </div>
+            <div class="col-md-3"></div>        
+        </div>
+        <div class="d-flex text-center">
+            <div style="width: 500px" id="reader"></div>
+            <div id="qr-reader" style="width:500px"></div>
+            <div id="qr-reader-results"></div>
+        </div>    
+        <div class="row my-3 d-flex justify-content-center text-center">
+            <h5>單號:</h5>
+            <h5>2219773580</h5>
+        </div>
+        <div class="text-center">            
+        <div class="container">
+            <br>            
+              <div class="col-xs-8 text-center table-wrapper">                                                  
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th>項次</th>
+                      <th>品號</th>
+                      <th>品名</th>
+                      <th>條碼</th>
+                      <th>移除</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>1</td>
+                      <td>0032</td>
+                      <td>奶粉</td>
+                      <td>00379133545</td>
+                      <td><div class="btn btn-danger">移除</div></td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>0039</td>
+                        <td>軟糖</td>
+                        <td>00687988223</td>
+                        <td><div class="btn btn-danger">移除</div></td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>0032</td>
+                        <td>奶粉</td>
+                        <td>05454873232</td>
+                        <td><div class="btn btn-danger">移除</div></td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>0032</td>
+                        <td>奶粉</td>
+                        <td>354521212878</td>
+                        <td><div class="btn btn-danger">移除</div></td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>0032</td>
+                        <td>奶粉</td>
+                        <td>5653234545451</td>
+                        <td><div class="btn btn-danger">移除</div></td>
+                    </tr>
+                    <tr>
+                        <td>6</td>
+                        <td>0032</td>
+                        <td>奶粉</td>
+                        <td>557821212212</td>
+                        <td><div class="btn btn-danger">移除</div></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>    
+        </div>        
+        <div class="row text-center my-5 inline-block">
+            <div class="col-md-3"></div>        
+            <div class="col-md-3">
+                <div class="btn btn-info">重置</div>
+            </div>
+            <div class="col-md-3">                
+                <div class="btn btn-danger">結束</div>
+            </div>
+            <div class="col-md-3"></div>        
+        </div>
         <script>
             function docReady(fn) {
                 // see if DOM is already available
@@ -944,6 +1036,14 @@ canvas.drawing, canvas.drawingBuffer {
                 html5QrcodeScanner.render(onScanSuccess, onScanError);
             });
         </script>
+        <style>
+            .table-wrapper {
+                max-height: 20rem;
+                overflow: auto;
+                display:inline-block;
+            }
+            
+        </style>        
     </body>
 </html>
 
