--- a/red-snow/index.html
+++ b/red-snow/index.html
@@ -907,17 +907,17 @@ canvas.drawing, canvas.drawingBuffer {
         <!-- <script src="html5-qrcode-demo.js"></script> -->
     </head>
     <body>
-        <div class="row text-center my-5 inline-block">
-            <div class="col-md-3"></div>        
+        <div class="text-center my-5">
+            <!-- <div class="col-md-3"></div>        
             <div class="col-md-3"></div>
-            <div class="col-md-3">                
+            <div class="col-md-3">                 -->
                 <div class="btn btn-success">開始</div>                    
-            </div>
-            <div class="col-md-3"></div>        
+            <!-- </div>
+            <div class="col-md-3"></div>         -->
         </div>
         <div class="d-flex text-center">
-            <div style="width: 500px" id="reader"></div>
-            <div id="qr-reader" style="width:500px"></div>
+            <!-- <div style="width: 100%" id="reader"></div> -->
+            <div id="qr-reader" class="col-xs-12" style="width:100%;"></div>
             <div id="qr-reader-results"></div>
         </div>    
         <div class="row my-3 d-flex justify-content-center text-center">
