--- a/red-snow/index.html
+++ b/red-snow/index.html
@@ -894,19 +894,22 @@ canvas.drawing, canvas.drawingBuffer {
 </html> -->
 
 <html>
-    <head>
+    <head>        
+        <meta name="viewport" content="width=100%, initial-scale=1.1, user-scalable=no" />
+        <script src="html5-qrcode.min.js"></script>
+        <script src="https://raw.githubusercontent.com/mebjas/html5-qrcode/master/minified/html5-qrcode.min.js"></script>
         <!-- <script  src="html5-qrcode.min.js"></script>                 -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="index.css" />  
+        <!-- <link rel="stylesheet" type="text/css" href="index.css" />   -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>      
-        <script src="html5-qrcode.min.js"></script>
-        <script src="https://raw.githubusercontent.com/mebjas/html5-qrcode/master/minified/html5-qrcode.min.js"></script>
-        <!-- <script src="html5-qrcode-demo.js"></script> -->
+        
+        <!-- <script src="html5-qrcode-demo.js"></script> -->        
     </head>
     <body>
+        <div class="container">
         <div class="text-center my-5">
             <!-- <div class="col-md-3"></div>        
             <div class="col-md-3"></div>
@@ -914,6 +917,13 @@ canvas.drawing, canvas.drawingBuffer {
                 <div class="btn btn-success">開始</div>                    
             <!-- </div>
             <div class="col-md-3"></div>         -->
+        </div>
+        <div class="text-center justify-content-center my-2 row">
+            <div class="mx-0 col-5 col-xs-5 col-sm-5 col-md-5 col-lg-5">
+                <input type="text" class="form-control" id="inputBarCode"/>
+            </div>
+            <div class="mx-1 btn btn-primary">確認</div>
+            <div class="mx-1 btn btn-warning">掃描輸入</div>
         </div>
         <div class="d-flex text-center">
             <!-- <div style="width: 100%" id="reader"></div> -->
@@ -986,15 +996,16 @@ canvas.drawing, canvas.drawingBuffer {
               </div>
             </div>    
         </div>        
-        <div class="row text-center my-5 inline-block">
-            <div class="col-md-3"></div>        
-            <div class="col-md-3">
+        <div class="row text-center my-5 mx-0 inline-block">
+            <div class="col-3 col-md-3"></div>        
+            <div class="col-3 col-md-3">
                 <div class="btn btn-info">重置</div>
             </div>
-            <div class="col-md-3">                
+            <div class="col-3 col-md-3">                
                 <div class="btn btn-danger">結束</div>
             </div>
-            <div class="col-md-3"></div>        
+            <div class="col-3 col-md-3"></div>        
+        </div>
         </div>
         <script>
             function docReady(fn) {
