feat: 加placeholder和調輸入框大小

--- a/red-snow/index.html
+++ b/red-snow/index.html
@@ -919,8 +919,8 @@ canvas.drawing, canvas.drawingBuffer {
             <div class="col-md-3"></div>         -->
         </div>
         <div class="text-center justify-content-center my-2 row">
-            <div class="mx-0 col-5 col-xs-5 col-sm-5 col-md-5 col-lg-5">
-                <input type="text" class="form-control" id="inputBarCode"/>
+            <div class="mx-0 col-6 col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <input type="text" class="form-control" placeholder="掃描或手動輸入" id="inputBarCode"/>
             </div>
             <div class="mx-1 btn btn-primary">確認</div>
             <div class="mx-1 btn btn-warning">掃描輸入</div>
