--- a/red-snow/index.html
+++ b/red-snow/index.html
@@ -1030,7 +1030,7 @@ canvas.drawing, canvas.drawingBuffer {
                         ++countResults;
                         lastResult = decodedText;
                         // console.log(`Scan result = ${decodedText}`, decodedResult);
-                        $('inputBarCode').html(decodedResult);
+                        $('inputBarCode').value(decodedResult);
             
                         resultContainer.innerHTML += `<div>[${countResults}] - ${decodedText}</div>`;
                         
