--- a/red-snow/index.html
+++ b/red-snow/index.html
@@ -914,15 +914,15 @@ canvas.drawing, canvas.drawingBuffer {
             <!-- <div class="col-md-3"></div>        
             <div class="col-md-3"></div>
             <div class="col-md-3">                 -->
-                <div class="btn btn-success" onclick="">開始</div>                    
+                <div class="btn btn-success" onclick="start()">開始</div>                    
             <!-- </div>
             <div class="col-md-3"></div>         -->
         </div>
         <div class="text-center justify-content-center my-2 row">
             <div class="mx-0 col-6 col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                <input type="text" class="form-control" placeholder="掃描或手動輸入" id="inputBarCode"/>
+                <input type="text" class="form-control" placeholder="掃描或輸入單號" id="inputBarCode"/>
             </div>
-            <div class="mx-1 btn btn-primary">確認</div>
+            <div class="mx-1 btn btn-primary" onclick="newRecordOrNewOrder()">確認</div>
             <div class="mx-1 btn btn-warning">掃描輸入</div>
         </div>
         <div class="d-flex text-center">
@@ -932,7 +932,7 @@ canvas.drawing, canvas.drawingBuffer {
         </div>    
         <div class="row my-3 d-flex justify-content-center text-center">
             <h5>單號:</h5>
-            <h5>2219773580</h5>
+            <h5 id="orderId"></h5>
         </div>
         <div class="text-center">            
         <div class="container">
@@ -949,48 +949,48 @@ canvas.drawing, canvas.drawingBuffer {
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
+                    <!-- <tr>
                       <td class="col-xs-2">1</td>
                       <td class="col-xs-2">0032</td>
                       <td class="col-xs-2">奶粉</td>
                       <td class="col-xs-4">00379133545</td>
-                      <td class="col-xs-2"><div class="btn btn-danger">移除</div></td>
+                      <td class="col-xs-2"><div class="btn btn-danger delete">移除</div></td>
                     </tr>
                     <tr>
                         <td>2</td>
                         <td>0039</td>
                         <td>軟糖</td>
                         <td>00687988223</td>
-                        <td><div class="btn btn-danger">移除</div></td>
+                        <td><div class="btn btn-danger delete">移除</div></td>
                     </tr>
                     <tr>
                         <td>3</td>
                         <td>0032</td>
                         <td>奶粉</td>
                         <td>05454873232</td>
-                        <td><div class="btn btn-danger">移除</div></td>
+                        <td><div class="btn btn-danger delete">移除</div></td>
                     </tr>
                     <tr>
                         <td>4</td>
                         <td>0032</td>
                         <td>奶粉</td>
                         <td>354521212878</td>
-                        <td><div class="btn btn-danger">移除</div></td>
+                        <td><div class="btn btn-danger delete">移除</div></td>
                     </tr>
                     <tr>
                         <td>5</td>
                         <td>0032</td>
                         <td>奶粉</td>
                         <td>5653234545451</td>
-                        <td><div class="btn btn-danger">移除</div></td>
+                        <td><div class="btn btn-danger delete">移除</div></td>
                     </tr>
                     <tr>
                         <td>6</td>
                         <td>0032</td>
                         <td>奶粉</td>
                         <td>557821212212</td>
-                        <td><div class="btn btn-danger">移除</div></td>
-                    </tr>
+                        <td><div class="btn btn-danger delete">移除</div></td>
+                    </tr> -->
                   </tbody>
                 </table>
               </div>
@@ -999,15 +999,29 @@ canvas.drawing, canvas.drawingBuffer {
         <div class="row text-center my-5 mx-0 inline-block">
             <div class="col-3 col-md-3"></div>        
             <div class="col-3 col-md-3">
-                <div class="btn btn-info">重置</div>
+                <div class="btn btn-info" onclick="clearTable()">重置</div>
             </div>
             <div class="col-3 col-md-3">                
-                <div class="btn btn-danger">結束</div>
+                <div class="btn btn-danger" onclick="end()">結束</div>
             </div>
             <div class="col-3 col-md-3"></div>        
         </div>
         </div>
         <script>
+            
+            let isStarted = false;
+            let isBegun = false;
+
+            function start() {
+                isStarted = true;
+                $('input:text').attr('placeholder','掃描或輸入單號');
+            }
+
+            function end() {
+                isStarted = false;
+                isBegun = false;
+            }
+
             function docReady(fn) {
                 // see if DOM is already available
                 if (document.readyState === "complete" || document.readyState === "interactive") {
@@ -1047,9 +1061,42 @@ canvas.drawing, canvas.drawingBuffer {
                 
                 html5QrcodeScanner.render(onScanSuccess, onScanError);
             });
+            $(document).on("click", ".delete", function(){                                
+                $(this).parents("tr").remove();                 
+            });
             // function testInput() {
             //     $('#inputBarCode').val('11111');
             // }
+            let itemCount = 0;
+            function newRecordOrNewOrder() {
+                if (isBegun) {
+                    $('table').find('tbody').append('<tr><td>' + ((itemCount++) + 1).toString() + '</td><td></td><td></td><td>' + $('#inputBarCode').val() + '</td><td><div class="btn btn-danger delete">移除</div></td></tr>');
+                    $('#inputBarCode').val('');
+                } else if (!isBegun && isStarted) {
+                    if ($('#inputBarCode').val()) {
+                        $('#orderId').html($('#inputBarCode').val());                    
+                        isBegun = true;
+                        $('input:text').attr('placeholder','掃描或輸入條碼');
+                        $('#inputBarCode').val('');
+                    } else {
+                        alert('請掃描或輸入單號!');                    
+                    }
+                }
+
+            }
+
+            function clearTable() {
+                if (!isStarted) {
+                    if (confirm("您確定要刪除此筆訂單的所有資料嗎?")) {
+                        $('tr td').remove();
+                    } 
+                } else {
+                    if (confirm("刪除此筆訂單目前的資料嗎?")) {
+                        $('tr td').remove();
+                    }
+                }    
+            }
+
         </script>
         <style>
             /* .table-wrapper {
