--- a/red-snow/index.html
+++ b/red-snow/index.html
@@ -1100,16 +1100,10 @@ canvas.drawing, canvas.drawingBuffer {
         </script>
         <style>
             .table-wrapper {
-                width: max-content;
+                width: 200%;
                 overflow: auto;
                 display:inline-block;
-            }
-
-            .close-icon{
-                position:relative;
-                left: -14px;
-                top: -4px;
-            }
+            }            
             /* table {
                 max-height: 5rem;
                 width: 120%;
