--- a/red-snow/index.html
+++ b/red-snow/index.html
@@ -1076,6 +1076,7 @@ canvas.drawing, canvas.drawingBuffer {
                 // })
 
                 $(function () {
+                    alert('testest');
                     initDB();
                     addObj();               
                     getObj(); 
