--- a/red-snow/index.html
+++ b/red-snow/index.html
@@ -1204,7 +1204,7 @@ canvas.drawing, canvas.drawingBuffer {
                 var itemCount = 0;
                 $(function() {
                     isStarted = true;
-                    $('#orderId').html() = thisOrderId;
+                    $('#orderId').html(thisOrderId);
                     // $('input:text').attr('placeholder','掃描或輸入單號');
                 });
                 // $(function() {
