--- a/red-snow/index.html
+++ b/red-snow/index.html
@@ -1206,7 +1206,7 @@ canvas.drawing, canvas.drawingBuffer {
                 var yyyy = today.getFullYear();
                 var today = yyyy + '/' + mm + '/' + dd;
                 var todayWithoutSlash = yyyy + mm + dd;                            
-                var needRefresh = true;
+                var needRefresh = false;
                 const table_header = "no,code,hint";
                 var index;
                 var isStarted = false;
