--- a/red-snow/index.html
+++ b/red-snow/index.html
@@ -1301,9 +1301,20 @@ canvas.drawing, canvas.drawingBuffer {
                     });                                        
                 });
                 var isManual = false;
+                var cancelManual = true;
                 function orderIdInputByManual () {
-                    $('#inputBarCode').focus();
-                    isManual = true;
+                    if (!isManual) {
+                        $('#inputBarCode').focus();
+                        $('#manualInputOrderId').text('取消手動輸入單號');
+                        $('#orderId').html('');
+                        isManual = true;
+                    } else {
+                        $('#inputBarCode').blur();
+                        $('#manualInputOrderId').text('單號手動輸入');
+                        $('#orderId').html(thisOrderId);
+                        // cancelManual = true;
+                        isManual = false;
+                    }
                 }
                 
                 $(document).ready(function () {
@@ -1538,7 +1549,8 @@ canvas.drawing, canvas.drawingBuffer {
                 function newRecordOrNewOrder() {
                     if (isManual) {
                         $("#orderId").html($("#inputBarCode").val());
-                        localStorage.orderId = $("#inputBarCode").val();                    
+                        localStorage.orderId = $("#inputBarCode").val();  
+                        isManual = false;                  
                     }
                     if (isBegun) {
                         $('table').find('tbody').append('<tr><td>' + (itemCount + 1).toString() + '</td><td class="barcode">' + $('#inputBarCode').val() + '</td><td class="col-4 col-xs-4 col-sm-4 col-md-4 col-lg-4"><div class="input-group"><input type="text" id="field' + itemCount.toString() + '" class="form-control memo"/><div class="input-group-append"><div class="btn btn-danger px-1 reset-input" onclick="clearInput(\'field' + itemCount.toString() + '\')">×</div></div></div></td><td><div class="btn btn-danger delete">移除</div></td></tr>');
