--- a/red-snow/index.html
+++ b/red-snow/index.html
@@ -1555,11 +1555,15 @@ canvas.drawing, canvas.drawingBuffer {
                 // }
                 
                 function newRecord() {
-                    if (isManual) {
-                        $("#orderId").html($("#inputBarCode").val());
-                        localStorage.orderId = $("#inputBarCode").val();  
-                        isManual = false;                  
+                    if ($('#orderIdH5').html() === '') {
+                        alert('單號未輸入!');
+                        return;
                     }
+                    // if (isManual) {
+                    //     $("#orderId").html($("#inputBarCode").val());
+                    //     localStorage.orderId = $("#inputBarCode").val();  
+                    //     isManual = false;                  
+                    // }
                     if (isBegun) {
                         $('table').find('tbody').append('<tr><td>' + (itemCount + 1).toString() + '</td><td class="barcode">' + $('#inputBarCode').val() + '</td><td class="col-4 col-xs-4 col-sm-4 col-md-4 col-lg-4"><div class="input-group"><input type="text" id="field' + itemCount.toString() + '" class="form-control memo"/><div class="input-group-append"><div class="btn btn-danger px-1 reset-input" onclick="clearInput(\'field' + itemCount.toString() + '\')">×</div></div></div></td><td><div class="btn btn-danger delete">移除</div></td></tr>');
                         $('#inputBarCode').val('');
