--- a/red-snow/index.html
+++ b/red-snow/index.html
@@ -934,25 +934,6 @@ canvas.drawing, canvas.drawingBuffer {
             <!-- </div>
             <div class="col-md-3"></div>         -->
         </div>
-        <div class="text-center justify-content-center my-2 row">
-            <div class="mx-0 input-group col-12 col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <input type="text" class="form-control" placeholder="掃描或輸入條碼" id="inputBarCode"/>
-                <div class="input-group-append">                
-                    <div class="btn btn-danger px-1 reset-input" onclick="clearInput('inputBarCode')">×</div>
-                </div>
-                <div class="input-group-append">                
-                    <div class="btn btn-primary px-3" onclick="newRecord()">確認</div>
-                </div>
-                <!-- <div class="input-group-append">                
-                    <div class="btn btn-warning px-1">掃描輸入</div>
-                </div> -->
-            </div>        
-        </div>
-        <div class="d-flex text-center">
-            <!-- <div style="width: 100%" id="reader"></div> -->
-            <div id="qr-reader" class="col-xs-12" style="width:100%;" hidden="true"></div>
-            <div id="qr-reader-results"></div>
-        </div>
         <div class="row my-3 d-flex justify-content-center text-center">
             <div id="orderIdGrp" class="row mx-1">
                 <h5 class="my-1 mx-1">單號:</h5>
@@ -972,6 +953,26 @@ canvas.drawing, canvas.drawingBuffer {
                         </div>                    
                 </div>
             </div>
+        </div>
+        
+        <div class="d-flex text-center">
+            <!-- <div style="width: 100%" id="reader"></div> -->
+            <div id="qr-reader" class="col-xs-12" style="width:100%;" hidden="true"></div>
+            <div id="qr-reader-results"></div>
+        </div>
+        <div class="text-center justify-content-center my-2 row">
+            <div class="mx-0 input-group col-12 col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <input type="text" class="form-control" placeholder="掃描或輸入條碼" id="inputBarCode"/>
+                <div class="input-group-append">                
+                    <div class="btn btn-danger px-1 reset-input" onclick="clearInput('inputBarCode')">×</div>
+                </div>
+                <div class="input-group-append">                
+                    <div class="btn btn-primary px-3" onclick="newRecord()">確認</div>
+                </div>
+                <!-- <div class="input-group-append">                
+                    <div class="btn btn-warning px-1">掃描輸入</div>
+                </div> -->
+            </div>        
         </div>
         <div class="text-center">            
         <div class="container">
@@ -1316,22 +1317,22 @@ canvas.drawing, canvas.drawingBuffer {
                         // $('input:text').attr('placeholder','掃描或輸入單號');
                     });                                        
                 });
-                var isManual = false;
-                var cancelManual = true;
-                function orderIdInput () {
-                    if (!isManual) {
-                        $('#inputBarCode').focus();
-                        $('#manualInputOrderId').text('取消手動輸入單號');
-                        $('#orderId').html('');
-                        isManual = true;
-                    } else {
-                        $('#inputBarCode').blur();
-                        $('#manualInputOrderId').text('單號手動輸入');
-                        $('#orderId').html(thisOrderId);
-                        // cancelManual = true;
-                        isManual = false;
-                    }
-                }
+                // var isManual = false;
+                // var cancelManual = true;
+                // function orderIdInput () {
+                //     if (!isManual) {
+                //         $('#inputBarCode').focus();
+                //         $('#manualInputOrderId').text('取消手動輸入單號');
+                //         $('#orderId').html('');
+                //         isManual = true;
+                //     } else {
+                //         $('#inputBarCode').blur();
+                //         $('#manualInputOrderId').text('單號手動輸入');
+                //         $('#orderId').html(thisOrderId);
+                //         // cancelManual = true;
+                //         isManual = false;
+                //     }
+                // }
                 
                 $(document).ready(function () {
                     if (window.location.hash === '#reload') {
