--- a/red-snow/index.html
+++ b/red-snow/index.html
@@ -1514,11 +1514,13 @@ canvas.drawing, canvas.drawingBuffer {
                     
                     var html5QrcodeScanner = new Html5QrcodeScanner(
                         "qr-reader", { fps: 10, qrbox: 250 });
-                    if ($('#orderIdInput').html() === "") {
-                        $('#orderIdInput').html(thisOrderId);
-                    }
+                    
                     function onScanSuccess(decodedText, decodedResult) {
-                        $('#inputBarCode').val(decodedText);
+                        if ($('#orderIdInput').html() === "") {
+                            $('#orderIdInput').html(decodedText);
+                        } else {
+                            $('#inputBarCode').val(decodedText);
+                        }
                         // if (decodedText !== lastResult) {
                         //     ++countResults;
                         //     lastResult = decodedText;
