--- a/red-snow/index.html
+++ b/red-snow/index.html
@@ -1228,7 +1228,7 @@ canvas.drawing, canvas.drawingBuffer {
                 var needRefresh = false;
                 const table_header = "no,orderId,code,hint,date";
                 var isStarted = false;
-                var isBegun = false;
+                // var isBegun = false;
                 var itemCount = 0;
                 var thisOrderId;
                 var confirmPopup = false;
@@ -1429,7 +1429,7 @@ canvas.drawing, canvas.drawingBuffer {
                     }                
 
                     isStarted = true;
-                    isBegun = true;
+                    // isBegun = true;
                     localStorage.today = today;
                     localStorage.todayWithoutSlash = todayWithoutSlash;
                 }
@@ -1438,7 +1438,7 @@ canvas.drawing, canvas.drawingBuffer {
                 function end() {
                     isFinished = true;
                     isStarted = false;
-                    isBegun = false;
+                    // isBegun = false;
                     // alert($('#orderIdH5').html());
                     var tpl = '<a download="' + $('#orderIdH5').html() + '.csv" href="data:application/csv;charset=utf-8,{table_header}%0A{table_content}"><div id="downloadOrder" onclick="updateThisStatus()">下載此訂單</div></a>';
                     var table_content = '';
@@ -1580,11 +1580,11 @@ canvas.drawing, canvas.drawingBuffer {
                     //     localStorage.orderId = $("#inputBarCode").val();  
                     //     isManual = false;                  
                     // }
-                    if (isBegun) {
-                        $('table').find('tbody').append('<tr><td>' + (itemCount + 1).toString() + '</td><td class="barcode">' + $('#inputBarCode').val() + '</td><td class="col-4 col-xs-4 col-sm-4 col-md-4 col-lg-4"><div class="input-group"><input type="text" id="field' + itemCount.toString() + '" class="form-control memo"/><div class="input-group-append"><div class="btn btn-danger px-1 reset-input" onclick="clearInput(\'field' + itemCount.toString() + '\')">×</div></div></div></td><td><div class="btn btn-danger delete">移除</div></td></tr>');
-                        $('#inputBarCode').val('');
-                        itemCount++;
-                    } 
+                    // if (isBegun) {
+                    $('table').find('tbody').append('<tr><td>' + (itemCount + 1).toString() + '</td><td class="barcode">' + $('#inputBarCode').val() + '</td><td class="col-4 col-xs-4 col-sm-4 col-md-4 col-lg-4"><div class="input-group"><input type="text" id="field' + itemCount.toString() + '" class="form-control memo"/><div class="input-group-append"><div class="btn btn-danger px-1 reset-input" onclick="clearInput(\'field' + itemCount.toString() + '\')">×</div></div></div></td><td><div class="btn btn-danger delete">移除</div></td></tr>');
+                    $('#inputBarCode').val('');
+                    itemCount++;
+                    // } 
 
                     // } else if (!isBegun && isStarted) {
                     //     if ($('#inputBarCode').val()) {
