--- a/red-snow/index.html
+++ b/red-snow/index.html
@@ -370,14 +370,46 @@
         }
 
         function newOrder() {
-            $('#orderIdInput').attr("hidden", true);                                        
-            $('#ensureOrderIdBtn').attr("hidden", true);
-            $('#scanOrderIdBtn').attr("hidden", true);    
-            $('#orderIdH5').html($('#orderIdInput').val());
-            $('#orderIdH5').attr("hidden", false);
-            $("#orderIdclear").attr("hidden", false);
-            $('#inputBarCode').focus();
-            thisOrderId = $('#orderIdInput').val();
+            if (localStorage.getItem($('#orderIdInput').val()) !== null) {
+                if (confirm('此筆訂單已經存在，要繼續編輯嗎?')) {
+                    thisOrderId = $('#orderIdInput').val();
+                    clearTable();                    
+                    $('#orderIdInput').attr("hidden", true);                                        
+                    $('#ensureOrderIdBtn').attr("hidden", true);
+                    $('#scanOrderIdBtn').attr("hidden", true);    
+                    $('#orderIdH5').html($('#orderIdInput').val());
+                    $('#orderIdH5').attr("hidden", false);
+                    $("#orderIdclear").attr("hidden", false);
+                    $('#inputBarCode').focus();                    
+                    let data = JSON.parse(localStorage.getItem($('#orderIdInput').val()));    
+                    let table_content = data["table_content"];
+
+                    if (typeof(table_content) === 'undefined') {
+                        data = localStorage.getItem($('#orderIdInput').val());
+                        data = data.replaceAll("\\", "");
+                        data = data.substring(1, data.length - 1);
+                        data = JSON.parse(data);
+                        table_content = data.table_content;
+                    }
+                    let tableArr = table_content.split('%2C');
+                    let barcode = '';
+                    let hint = '';
+                    let itemCount = 1;
+                    for (let j = 0; j < tableArr.length; j++) {
+                        if (j % 0 === 0) {
+                            itemCount = tableArr[j];
+                        } if (j % 4 === 2) {
+                            barcode = tableArr[j];
+                        } else if (j % 4 === 3) {
+                            hint = tableArr[j];
+                        } 
+
+                    }
+                    $('table').find('tbody').append('<tr><td>' + (itemCount).toString() + '</td><td class="barcode">' + barcode + '</td><td class="col-4 col-xs-4 col-sm-4 col-md-4 col-lg-4"><div class="input-group"><input type="text" id="field' + parseInt(itemCount - 1).toString() + '" class="form-control memo"/><div class="input-group-append"><div class="btn btn-danger px-1 reset-input" onclick="clearInput(\'field' + parseInt(itemCount - 1).toString() + '\')">×</div></div></div></td><td><div class="btn btn-danger delete">移除</div></td></tr>');
+                    $('field' + parseInt(itemCount - 1).toString()).val(hint);
+                }
+                        
+            } 
         }
         document.getElementById("orderIdInput").addEventListener("keyup", function(event) {
         // var orderIdElement = document.getElementById('orderIdInput');
@@ -477,26 +509,6 @@
             $("#" + id).val("");
         }
         
-        function newRecord() {
-            if ($('#orderIdH5').html() === '') {
-                alert('單號未輸入!');
-                return;
-            }
-            $('table').find('tbody').append('<tr><td>' + (itemCount + 1).toString() + '</td><td class="barcode">' + $('#inputBarCode').val() + '</td><td class="col-4 col-xs-4 col-sm-4 col-md-4 col-lg-4"><div class="input-group"><input type="text" id="field' + itemCount.toString() + '" class="form-control memo"/><div class="input-group-append"><div class="btn btn-danger px-1 reset-input" onclick="clearInput(\'field' + itemCount.toString() + '\')">×</div></div></div></td><td><div class="btn btn-danger delete">移除</div></td></tr>');
-            $('#inputBarCode').val('');
-            itemCount++;
-            $('#inputBarCode').focus();
-        }
-
-        function newOrder() {
-            $('#orderIdInput').attr("hidden", true);                                        
-            $('#ensureOrderIdBtn').attr("hidden", true);
-            $('#scanOrderIdBtn').attr("hidden", true);    
-            $('#orderIdH5').html($('#orderIdInput').val());
-            $('#orderIdH5').attr("hidden", false);
-            $("#orderIdclear").attr("hidden", false);
-            $('#inputBarCode').focus();
-        }
 
         function modifyOrderId() {                    
             $('#orderIdInput').attr("hidden", false);                                                            
@@ -553,6 +565,8 @@
         }
 
         function removeDownloadThisOrderBtn() {
+            localStorage.setItem(thisOrderId, JSON.stringify(JSON.parse(localStorage.getItem(thisOrderId))));
+            $('#orderIdH5').html("");            
             $("#downloadThisOrderBtn").remove();
         }
     </script>
